# Pyderivatives

./: .gitattributes  pyproject.toml
pyderivatives/: __init__.py  demokernel.py
pyderivatives/archive_conditional_pricing_kernel/: __init__.py  bootstrap.py  cache.py  config.py  data.py  eval.py  fit.py  kernel.py  moments.py  panel_plots.py
pyderivatives/demodata/: REMX_options.csv  REMX_stock.csv  daily-treasury-rates (3).csv  remx_pricing_kernels.pkl
pyderivatives/global_pricer/: global_surface_pricer.py
pyderivatives/global_pricer/plotting/: panels.py  surfaces.py
pyderivatives/option_market_standardizer/: core.py
pyderivatives/option_market_standardizer/vendors/: __init__.py  minutebars.py
pyderivatives/post_estimation/: generalizedquantilesreg.py  multiplots_error_diagn.py  utils.py
pyderivatives/pricing_kernels/: __init__.py  base.py  config.py  moments.py  plots.py  registry.py  utils.py
pyderivatives/pricing_kernels/methods/: __init__.py  beta_calibration.py  conditional_risk.py  exponential_polynomial.py  nonparametric_calibration.py
